--- a/notebooks/clase_prebootcamp_ds.ipynb
+++ b/notebooks/clase_prebootcamp_ds.ipynb
@@ -22,120 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n"
+      "0\n"
      ]
     }
    ],
    "source": [
     "for i in range(101):\n",
-    "    print(i)"
+    "    print(i)\n",
+    "    break"
    ]
   },
   {
@@ -147,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -155,257 +56,8 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n",
-      "22\n",
-      "24\n",
-      "26\n",
-      "28\n",
-      "30\n",
-      "32\n",
-      "34\n",
-      "36\n",
-      "38\n",
-      "40\n",
-      "42\n",
-      "44\n",
-      "46\n",
-      "48\n",
-      "50\n",
-      "52\n",
-      "54\n",
-      "56\n",
-      "58\n",
-      "60\n",
-      "62\n",
-      "64\n",
-      "66\n",
-      "68\n",
-      "70\n",
-      "72\n",
-      "74\n",
-      "76\n",
-      "78\n",
-      "80\n",
-      "82\n",
-      "84\n",
-      "86\n",
-      "88\n",
-      "90\n",
-      "92\n",
-      "94\n",
-      "96\n",
-      "98\n",
-      "100\n",
-      "102\n",
-      "104\n",
-      "106\n",
-      "108\n",
-      "110\n",
-      "112\n",
-      "114\n",
-      "116\n",
-      "118\n",
-      "120\n",
-      "122\n",
-      "124\n",
-      "126\n",
-      "128\n",
-      "130\n",
-      "132\n",
-      "134\n",
-      "136\n",
-      "138\n",
-      "140\n",
-      "142\n",
-      "144\n",
-      "146\n",
-      "148\n",
-      "150\n",
-      "152\n",
-      "154\n",
-      "156\n",
-      "158\n",
-      "160\n",
-      "162\n",
-      "164\n",
-      "166\n",
-      "168\n",
-      "170\n",
-      "172\n",
-      "174\n",
-      "176\n",
-      "178\n",
-      "180\n",
-      "182\n",
-      "184\n",
-      "186\n",
-      "188\n",
-      "190\n",
-      "192\n",
-      "194\n",
-      "196\n",
-      "198\n",
-      "200\n",
-      "202\n",
-      "204\n",
-      "206\n",
-      "208\n",
-      "210\n",
-      "212\n",
-      "214\n",
-      "216\n",
-      "218\n",
-      "220\n",
-      "222\n",
-      "224\n",
-      "226\n",
-      "228\n",
-      "230\n",
-      "232\n",
-      "234\n",
-      "236\n",
-      "238\n",
-      "240\n",
-      "242\n",
-      "244\n",
-      "246\n",
-      "248\n",
-      "250\n",
-      "252\n",
-      "254\n",
-      "256\n",
-      "258\n",
-      "260\n",
-      "262\n",
-      "264\n",
-      "266\n",
-      "268\n",
-      "270\n",
-      "272\n",
-      "274\n",
-      "276\n",
-      "278\n",
-      "280\n",
-      "282\n",
-      "284\n",
-      "286\n",
-      "288\n",
-      "290\n",
-      "292\n",
-      "294\n",
-      "296\n",
-      "298\n",
-      "300\n",
-      "302\n",
-      "304\n",
-      "306\n",
-      "308\n",
-      "310\n",
-      "312\n",
-      "314\n",
-      "316\n",
-      "318\n",
-      "320\n",
-      "322\n",
-      "324\n",
-      "326\n",
-      "328\n",
-      "330\n",
-      "332\n",
-      "334\n",
-      "336\n",
-      "338\n",
-      "340\n",
-      "342\n",
-      "344\n",
-      "346\n",
-      "348\n",
-      "350\n",
-      "352\n",
-      "354\n",
-      "356\n",
-      "358\n",
-      "360\n",
-      "362\n",
-      "364\n",
-      "366\n",
-      "368\n",
-      "370\n",
-      "372\n",
-      "374\n",
-      "376\n",
-      "378\n",
-      "380\n",
-      "382\n",
-      "384\n",
-      "386\n",
-      "388\n",
-      "390\n",
-      "392\n",
-      "394\n",
-      "396\n",
-      "398\n",
-      "400\n",
-      "402\n",
-      "404\n",
-      "406\n",
-      "408\n",
-      "410\n",
-      "412\n",
-      "414\n",
-      "416\n",
-      "418\n",
-      "420\n",
-      "422\n",
-      "424\n",
-      "426\n",
-      "428\n",
-      "430\n",
-      "432\n",
-      "434\n",
-      "436\n",
-      "438\n",
-      "440\n",
-      "442\n",
-      "444\n",
-      "446\n",
-      "448\n",
-      "450\n",
-      "452\n",
-      "454\n",
-      "456\n",
-      "458\n",
-      "460\n",
-      "462\n",
-      "464\n",
-      "466\n",
-      "468\n",
-      "470\n",
-      "472\n",
-      "474\n",
-      "476\n",
-      "478\n",
-      "480\n",
-      "482\n",
-      "484\n",
-      "486\n",
-      "488\n",
-      "490\n",
-      "492\n",
-      "494\n",
-      "496\n",
-      "498\n",
-      "500\n",
       "-----\n",
-      "la cantidad de iteraciones son:  250\n"
+      "la cantidad de iteraciones son:  1\n"
      ]
     }
    ],
@@ -414,6 +66,7 @@
     "for i in range(2,501,2):\n",
     "    count += 1\n",
     "    print(i)\n",
+    "    break\n",
     "print(\"-----\")\n",
     "print(\"la cantidad de iteraciones son: \", count)"
    ]
