clase prebootcamp terminada

--- a/notebooks/clase_prebootcamp_ds.ipynb
+++ b/notebooks/clase_prebootcamp_ds.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,6 +187,76 @@
    ],
    "source": [
     "contador_dinamico(numInicial = 2, numFinal = 14, multiplo = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### calculadora con return "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Contador dinámico con parámetros por default iguales a los del ejemplo\n",
+    "def calculadora_multiplo(numero_1, numero_2, multiplo):\n",
+    "    ## acá va la lógica del código\n",
+    "    result = numero_1 + numero_2\n",
+    "    if result % multiplo == 0:\n",
+    "        # Si el número es múltiplo de multiplo, lo imprimimos\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numero_1 = 1\n",
+    "numero_2 = 1\n",
+    "multiplo = 2\n",
+    "calculadora_multiplo(numero_1, numero_2, multiplo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numero_1 = 2\n",
+    "numero_2 = 1\n",
+    "multiplo = 2\n",
+    "calculadora_multiplo(numero_1, numero_2, multiplo)"
    ]
   }
  ],
