entrega de tarea percentiles guillermo cabrera

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -488,10 +488,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[40, 55, 28],\n",
+       "       [68, 52, 80],\n",
+       "       [92, 95, 85],\n",
+       "       [75, 75, 78],\n",
+       "       [20, 17, 10]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Verifico cual es la variable que contiene los datos y si esta esta correcta.\n",
+    "calificaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentil 25 por estudiante: [34.  60.  88.5 75.  13.5]\n",
+      "Percentil 50 por estudiante: [40. 68. 92. 75. 17.]\n",
+      "Percentil 75 por estudiante: [47.5 74.  93.5 76.5 18.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Los percentiles por alumno se sacan usando el axis 1 que es la fila.\n",
+    "percentil_25_estudiantes = np.percentile(calificaciones, 25, axis=1)\n",
+    "print(f\"Percentil 25 por estudiante: {percentil_25_estudiantes}\")\n",
+    "percentil_50_estudiantes = np.percentile(calificaciones, 50, axis=1)\n",
+    "print(f\"Percentil 50 por estudiante: {percentil_50_estudiantes}\")\n",
+    "percentil_75_estudiantes = np.percentile(calificaciones, 75, axis=1)\n",
+    "print(f\"Percentil 75 por estudiante: {percentil_75_estudiantes}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentil 25 por materia: [40. 52. 28.]\n",
+      "Percentil 50 por materia: [68. 55. 78.]\n",
+      "Percentil 75 por materia: [75. 75. 80.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Los percentiles por materia se sacan usando el axis 0 que es la columna.\n",
+    "percentil_25_materias = np.percentile(calificaciones, 25, axis=0)\n",
+    "print(f\"Percentil 25 por materia: {percentil_25_materias}\")\n",
+    "percentil_50_materias = np.percentile(calificaciones, 50, axis=0)\n",
+    "print(f\"Percentil 50 por materia: {percentil_50_materias}\")\n",
+    "percentil_75_materias = np.percentile(calificaciones, 75, axis=0)\n",
+    "print(f\"Percentil 75 por materia: {percentil_75_materias}\")"
+   ]
   }
  ],
  "metadata": {
@@ -510,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
