Agregada solución al Ejercicio 3 de la Clase 1

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lo siento, no puedes entrar a la fiesta.\n"
+      "Puedes entrar a la fiesta y te ofrecemos una bebida alcohólica.\n"
      ]
     }
    ],
@@ -189,11 +189,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solución Posible\n",
+    "\n",
+    "* Crear una función de validación para cada condición.\n",
+    "* Primera validación: Verificar la longitud de la contraseña contando los caractéres.\n",
+    "* Segunda validación: Iterar sobre los caracteres de la contraseña para determinar si ese caracter es mayúscula o no. En caso de encontrar una mayúscula, marcar dicha condición como válida y continuar con las siguientes condiciones sin verificar los caracteres restantes.\n",
+    "* Tercera validación: Iterar sobre todos los caracteres de la contraseña para determinar si ese caracter es dígito o no. En caso de encontrar un dígito, marcar dicha condición como válida y continuar con las siguientes condiciones sin verificar los caracteres restantes.\n",
+    "* Crear una función que llame a todas las funciones de validación, y retorne una lista de errores de acuerdo a los resultados de dichas validaciones. Para mayor claridad para el usuario, todas las validaciones se ejecutarán independientemente de si otras ya hayan fallado previamente. Esto permitirá al usuario corregir todos los problemas que pudieran haber de una vez.\n",
+    "* En caso de que todas las condiciones hayan sido cumplidas, indicar al usuario del registro exitoso, y caso contrario mostrar todos los errores y volver a solicitar una nueva contraseña."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Solución"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "def validar_longitud(contrasenha: str, longitud: int) -> bool:\n",
+    "    \"\"\"\n",
+    "    Valida la longitud de la contraseña.\n",
+    "\n",
+    "    :param str contrasenha: Contraseña a ser validada\n",
+    "    :param int longitud: Longitud mínima que debe tener la contraseña\n",
+    "    :rtype bool\n",
+    "    \"\"\"\n",
+    "    return len(contrasenha) >= longitud\n",
+    "\n",
+    "\n",
+    "def validar_existencia_caracter_mayusucula(contrasenha: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    Valida que exista como mínimo un caracter mayúscula en la contraseña\n",
+    "\n",
+    "    :param str contrasenha: Contraseña a ser validada\n",
+    "    :rtype bool\n",
+    "    \"\"\"\n",
+    "    caracteres_contrasenha = list(contrasenha)\n",
+    "\n",
+    "    for caracter in caracteres_contrasenha:\n",
+    "        if caracter.isupper():\n",
+    "            return True\n",
+    "        \n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def validar_existencia_digito(contrasenha: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    Valida que exista como mínimo un caracter mayúscula en la contraseña\n",
+    "\n",
+    "    :param str contrasenha: Contraseña a ser validada\n",
+    "    :rtype bool\n",
+    "    \"\"\"\n",
+    "    caracteres_contrasenha = list(contrasenha)\n",
+    "\n",
+    "    for caracter in caracteres_contrasenha:\n",
+    "        if caracter.isdigit():\n",
+    "            return True\n",
+    "        \n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def validar_contrasenha(contrasenha: str) -> List:\n",
+    "    \"\"\"\n",
+    "    Valida que la contraseña cumpla con las siguientes validaciones:\n",
+    "     - La contraseña debe tener al menos 8 caracteres.\n",
+    "     - Debe contener al menos una letra mayúscula.\n",
+    "     - Debe contener al menos un número.\n",
+    "\n",
+    "\n",
+    "    :param str contrasenha: Contraseña a ser validada\n",
+    "    :rtype list\n",
+    "    \"\"\"\n",
+    "    longitud_valida = validar_longitud(contrasenha, 8)\n",
+    "    mayuscula_existente = validar_existencia_caracter_mayusucula(contrasenha)\n",
+    "    digito_existente = validar_existencia_digito(contrasenha)\n",
+    "\n",
+    "    errores = []\n",
+    "\n",
+    "    if not longitud_valida:\n",
+    "        errores.append(\"La contraseña debe tener al menos 8 caracteres.\")\n",
+    "    \n",
+    "    if not mayuscula_existente:\n",
+    "        errores.append(\"Debe contener al menos una letra mayúscula.\")\n",
+    "\n",
+    "    if not digito_existente:\n",
+    "        errores.append(\"Debe contener al menos un número.\")\n",
+    "\n",
+    "    return errores\n",
+    "\n",
+    "\n",
+    "def _leer_y_validar_contrasenha():\n",
+    "    contrasenha = input(\"Por favor, introduzca su contraseña: \")\n",
+    "    errores = validar_contrasenha(contrasenha)\n",
+    "\n",
+    "    while len(errores) > 0:\n",
+    "        print(\"No se puede registrar la contraseña. Se han encontrado los siguientes errores: \\n\")\n",
+    "\n",
+    "        for error in errores:\n",
+    "            print(f\"- {error}\")\n",
+    "\n",
+    "        print(\"\\n\")\n",
+    "        \n",
+    "        contrasenha = input(\"Por favor, vuelva a intentarlo: \")\n",
+    "        errores = validar_contrasenha(contrasenha)\n",
+    "\n",
+    "    print(\"Contraseña registrada! Muchas gracias.\")\n",
+    "\n",
+    "\n",
+    "_leer_y_validar_contrasenha()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Función general de validación de contraseña"
+   ]
   },
   {
    "cell_type": "markdown",
