Ajustar docstrings para que coincidan con demás funciones en notebook

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -219,23 +219,12 @@
     "\n",
     "\n",
     "def validar_longitud(contrasenha: str, longitud: int) -> bool:\n",
-    "    \"\"\"\n",
-    "    Valida la longitud de la contraseña.\n",
-    "\n",
-    "    :param str contrasenha: Contraseña a ser validada\n",
-    "    :param int longitud: Longitud mínima que debe tener la contraseña\n",
-    "    :rtype bool\n",
-    "    \"\"\"\n",
+    "    # Valida la longitud de la contraseña.\n",
     "    return len(contrasenha) >= longitud\n",
     "\n",
     "\n",
     "def validar_existencia_caracter_mayusucula(contrasenha: str) -> bool:\n",
-    "    \"\"\"\n",
-    "    Valida que exista como mínimo un caracter mayúscula en la contraseña\n",
-    "\n",
-    "    :param str contrasenha: Contraseña a ser validada\n",
-    "    :rtype bool\n",
-    "    \"\"\"\n",
+    "    # Valida que exista como mínimo un caracter mayúscula en la contraseña\n",
     "    caracteres_contrasenha = list(contrasenha)\n",
     "\n",
     "    for caracter in caracteres_contrasenha:\n",
@@ -246,12 +235,7 @@
     "\n",
     "\n",
     "def validar_existencia_digito(contrasenha: str) -> bool:\n",
-    "    \"\"\"\n",
-    "    Valida que exista como mínimo un caracter mayúscula en la contraseña\n",
-    "\n",
-    "    :param str contrasenha: Contraseña a ser validada\n",
-    "    :rtype bool\n",
-    "    \"\"\"\n",
+    "    # Valida que exista como mínimo un caracter mayúscula en la contraseña\n",
     "    caracteres_contrasenha = list(contrasenha)\n",
     "\n",
     "    for caracter in caracteres_contrasenha:\n",
@@ -262,16 +246,10 @@
     "\n",
     "\n",
     "def validar_contrasenha(contrasenha: str) -> List:\n",
-    "    \"\"\"\n",
-    "    Valida que la contraseña cumpla con las siguientes validaciones:\n",
-    "     - La contraseña debe tener al menos 8 caracteres.\n",
-    "     - Debe contener al menos una letra mayúscula.\n",
-    "     - Debe contener al menos un número.\n",
-    "\n",
-    "\n",
-    "    :param str contrasenha: Contraseña a ser validada\n",
-    "    :rtype list\n",
-    "    \"\"\"\n",
+    "    # Valida que la contraseña cumpla con las siguientes validaciones:\n",
+    "    #  - La contraseña debe tener al menos 8 caracteres.\n",
+    "    #  - Debe contener al menos una letra mayúscula.\n",
+    "    #  - Debe contener al menos un número.\n",
     "    longitud_valida = validar_longitud(contrasenha, 8)\n",
     "    mayuscula_existente = validar_existencia_caracter_mayusucula(contrasenha)\n",
     "    digito_existente = validar_existencia_digito(contrasenha)\n",
