revertir cambios no requeridos por la resolución del ejercicio 3

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Puedes entrar a la fiesta y te ofrecemos una bebida alcohólica.\n"
+      "Lo siento, no puedes entrar a la fiesta.\n"
      ]
     }
    ],
