--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -215,15 +215,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
-    "\n",
-    "\n",
-    "def validar_longitud(contrasenha: str, longitud: int) -> bool:\n",
+    "def validar_longitud(contrasenha, longitud):\n",
     "    # Valida la longitud de la contraseña.\n",
     "    return len(contrasenha) >= longitud\n",
     "\n",
     "\n",
-    "def validar_existencia_caracter_mayusucula(contrasenha: str) -> bool:\n",
+    "def validar_existencia_caracter_mayusucula(contrasenha):\n",
     "    # Valida que exista como mínimo un caracter mayúscula en la contraseña\n",
     "    caracteres_contrasenha = list(contrasenha)\n",
     "\n",
@@ -234,7 +231,7 @@
     "    return False\n",
     "\n",
     "\n",
-    "def validar_existencia_digito(contrasenha: str) -> bool:\n",
+    "def validar_existencia_digito(contrasenha):\n",
     "    # Valida que exista como mínimo un caracter mayúscula en la contraseña\n",
     "    caracteres_contrasenha = list(contrasenha)\n",
     "\n",
@@ -245,7 +242,7 @@
     "    return False\n",
     "\n",
     "\n",
-    "def validar_contrasenha(contrasenha: str) -> List:\n",
+    "def validar_contrasenha(contrasenha):\n",
     "    # Valida que la contraseña cumpla con las siguientes validaciones:\n",
     "    #  - La contraseña debe tener al menos 8 caracteres.\n",
     "    #  - Debe contener al menos una letra mayúscula.\n",
