Clase Percentiles y contraseña

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -32,14 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lo siento, no puedes entrar a la fiesta.\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m-----------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m edad \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPor favor, introduce tu edad: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(edad) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[1;32m----> 4\u001b[0m     edad \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43medad\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Condicionales para verificar la edad y mostrar el mensaje adecuado\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m edad \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -92,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,17 +193,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Análisis:\n",
+    "1. Fijar un minimo de caracteres que permita al usuario no avanzar si escribe (crea) una contraseña con -8 así como también definir que tenga 1 mayus, y 1 numero.\n",
+    "2. No dejar crear al usuario contraseñas comunes, como User1234, 12345678, Estaesmicontra, entre otros, para ello debemos fijar un parametro que no permita avanzar al usuario si crea las mismas. Con esto también evitamos que use caracteres muy repetitivos y obvios."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La contraseña es común\n",
+      "Intente nuevamente\n",
+      "Registro exitoso\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_contrasena_comun(contrasena_a_evaluar):\n",
+    "    contrasenas_comunes = [\n",
+    "        \"User1234\", \"12345678\", \"Thisismypasword\", \"Password\", \"Abcde123\"\n",
+    "    ]\n",
+    "\n",
+    "    return contrasena_a_evaluar in contrasenas_comunes\n",
+    "    \n",
+    "\n",
+    "\n",
+    "def validar_contrasena(contrasena_a_evaluar):\n",
+    "\n",
+    "    \n",
+    "    if len(contrasena_a_evaluar) < 8:\n",
+    "        return False, \"La contraseña debe tener 8 caracteres como minimo\"\n",
+    "    if not any(char.isupper() for char in contrasena_a_evaluar):\n",
+    "        return False, \"La contraseña debe contener al menos 1 letra mayúscula.\"\n",
+    "    if not any(char.isdigit() for char in contrasena_a_evaluar): \n",
+    "        return False, \"La contraseña debe contener al menos 1 número\"\n",
+    "    if es_contrasena_comun(contrasena_a_evaluar):\n",
+    "        return False, \"La contraseña es común\" \n",
+    "    \n",
+    "    return True, \"Registro exitoso\"\n",
+    "\n",
+    "\n",
+    "def solicitar_contrasena():\n",
+    "    while True:\n",
+    "        contrasena = input(\"Favor ingrese su contraseña\")\n",
+    "        \n",
+    "        esvalido, mensaje = validar_contrasena(contrasena)\n",
+    "\n",
+    "        if esvalido:\n",
+    "            print(mensaje)\n",
+    "            break\n",
+    "        else:\n",
+    "            print(mensaje)\n",
+    "            print(\"Intente nuevamente\")\n",
+    "\n",
+    "\n",
+    "solicitar_contrasena()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ejercicio: Análisis de Calificaciones de Estudiantes\n",
+    "# Ejercicio: Análisis de Calificaciones de Estudiantes\n",
     "\n",
     "**Descripción del problema** Supongamos que tenemos las calificaciones de un grupo de estudiantes en 3 materias: Matemáticas, Ciencias y Lenguaje. Queremos realizar varias operaciones utilizando arrays para analizar las calificaciones y calcular estadísticas.\n",
     "\n",
@@ -218,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +291,7 @@
       "Propiedades del array:\n",
       "Forma (shape): (5, 3)\n",
       "Número de elementos (size): 15\n",
-      "Tipo de datos (dtype): int64\n",
+      "Tipo de datos (dtype): int32\n",
       "\n",
       "\n"
      ]
@@ -488,15 +551,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estudiante 1 {'Percentil 25': 34.0, 'Percentil 50': 40.0, 'Percentil 75': 47.5}\n",
+      "Estudiante 2 {'Percentil 25': 60.0, 'Percentil 50': 68.0, 'Percentil 75': 74.0}\n",
+      "Estudiante 3 {'Percentil 25': 88.5, 'Percentil 50': 92.0, 'Percentil 75': 93.5}\n",
+      "Estudiante 4 {'Percentil 25': 75.0, 'Percentil 50': 75.0, 'Percentil 75': 76.5}\n",
+      "Estudiante 5 {'Percentil 25': 13.5, 'Percentil 50': 17.0, 'Percentil 75': 18.5}\n",
+      "Matemáticas:\n",
+      "  Percentil 25: 40.0\n",
+      "  Percentil 50: 68.0\n",
+      "  Percentil 75: 75.0\n",
+      "Ciencias:\n",
+      "  Percentil 25: 52.0\n",
+      "  Percentil 50: 55.0\n",
+      "  Percentil 75: 75.0\n",
+      "Lenguaje:\n",
+      "  Percentil 25: 28.0\n",
+      "  Percentil 50: 78.0\n",
+      "  Percentil 75: 80.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "percentil_25 = np.percentile(calificaciones, 25, axis=0)\n",
+    "percentil_50 = np.percentile(calificaciones, 50, axis=0)\n",
+    "percentil_75 = np.percentile(calificaciones, 75, axis=0)\n",
+    "\n",
+    "percentiles = {}\n",
+    "for i, estudiante in enumerate(calificaciones):\n",
+    "    percentiles[f'Estudiante {i + 1}'] = {\n",
+    "        'Percentil 25': np.percentile(estudiante, 25),\n",
+    "        'Percentil 50': np.percentile(estudiante, 50),\n",
+    "        'Percentil 75': np.percentile(estudiante, 75),\n",
+    "    }\n",
+    "\n",
+    "for estudiante, percentil in percentiles.items():\n",
+    "    print(estudiante, percentil)\n",
+    "\n",
+    "materias = [\"Matemáticas\", \"Ciencias\", \"Lenguaje\"]\n",
+    "\n",
+    "for i, materia in enumerate(materias):\n",
+    "    print(f\"{materia}:\")\n",
+    "    print(f\"  Percentil 25: {percentil_25[i]}\")\n",
+    "    print(f\"  Percentil 50: {percentil_50[i]}\")\n",
+    "    print(f\"  Percentil 75: {percentil_75[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1: Verificar la edad para entrar en una fiesta\n",
+    "\n",
+    "Descripción: El programa debe solicitar al usuario su edad y, en función de la misma, mostrar un mensaje indicando si puede entrar a una fiesta. Las reglas son las siguientes:\n",
+    "\n",
+    "* Si el usuario tiene menos de 18 años, se mostrará un mensaje diciendo que no puede entrar.\n",
+    "* Si el usuario tiene entre 18 y 25 años (inclusive), se le permitirá entrar con una bebida sin alcohol.\n",
+    "* Si el usuario tiene más de 25 años, se le permitirá entrar con una bebida alcohólica.\n",
+    "\n",
+    "**Objetivo**\n",
+    "\n",
+    "* Repasar cómo tomar input del usuario.\n",
+    "* Usar condicionales para determinar la salida.\n",
+    "* Mostrar mensajes usando output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tareas:\n",
+    "\n",
+    "1. Tengo que generar un mecanismo por el cual pueda ingresar un valor\n",
+    "2. Asignar el valor ingresado a una variable y ser capaz de identificar cuál de las 3 condiciones se cumple\n",
+    "3. Entregar como output el valor correspondiente a la condición cumplida"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lo siento, no puedes entrar a la fiesta.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pedir la edad al usuario\n",
+    "edad = input(\"Por favor, introduce tu edad: \")\n",
+    "if type(edad) == str:\n",
+    "    edad = int(edad)\n",
+    "\n",
+    "# Condicionales para verificar la edad y mostrar el mensaje adecuado\n",
+    "if edad < 0:\n",
+    "    print(\"ingresaste un valor negativo, esto es incorrecto\")\n",
+    "elif 0 <= edad < 18:\n",
+    "    print(\"Lo siento, no puedes entrar a la fiesta.\")\n",
+    "elif 18 <= edad <= 25:\n",
+    "    print(\"Puedes entrar a la fiesta, pero solo con una bebida sin alcohol.\")\n",
+    "elif 25 < edad < 140:\n",
+    "    print(\"Puedes entrar a la fiesta y te ofrecemos una bebida alcohólica.\")\n",
+    "else:\n",
+    "    print(\"ingresaste un valor mayor que 140, esto es incorrecto\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
