esta es la 2da version

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -513,6 +513,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El arreglo con los percentiles por alumno es: \n",
+      " [[34.  60.  88.5 75.  13.5]\n",
+      " [40.  68.  92.  75.  17. ]\n",
+      " [47.5 74.  93.5 76.5 18.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=1)\n",
+    "print(\"El arreglo con los percentiles por alumno es: \\n\",percentiles)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "o"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -538,7 +566,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El arreglo con los percentiles por alumno es: \n",
+      " [[40. 52. 28.]\n",
+      " [68. 55. 78.]\n",
+      " [75. 75. 80.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentiles = np.percentile(calificaciones, [25, 50, 75], axis=0)\n",
+    "print(\"El arreglo con los percentiles por alumno es: \\n\",percentiles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
