--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -290,13 +290,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Función general de validación de contraseña"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Ejercicio: Análisis de Calificaciones de Estudiantes\n",
     "\n",
     "**Descripción del problema** Supongamos que tenemos las calificaciones de un grupo de estudiantes en 3 materias: Matemáticas, Ciencias y Lenguaje. Queremos realizar varias operaciones utilizando arrays para analizar las calificaciones y calcular estadísticas.\n",
@@ -585,16 +578,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solución posible:\n",
+    "\n",
+    "- Crear dos funciones, una para obtener percentiles por estudiante, y otra para obtener percentiles por materia\n",
+    "- La función de percentiles por estudiante, debe iterar sobre las filas de la matriz de calificaciones, ya que cada fila corresponde a las calificaciones de cada estudiante\n",
+    "- Se sacarán los tres percentiles (25, 50, 75)\n",
+    "- Se imprimirán los resultados de manera legible\n",
+    "- La función de percentiles por estudiante, debe iterar sobre las columnas de la matriz de calificaciones, ya que cada columnas corresponde a las calificaciones de cada materia\n",
+    "- Se sacarán los tres percentiles (25, 50, 75)\n",
+    "- Se imprimirán los resultados de manera legible\n",
+    "- Llamar ambas funciones con la matriz de calificaciones"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentil por estudiante: \n",
+      "\n",
+      "Estudiante\tPercentil 25\tPercentil 50\tPercentil 75\n",
+      "Estudiante 1\t34.0\t\t40.0\t\t47.5\n",
+      "Estudiante 2\t60.0\t\t68.0\t\t74.0\n",
+      "Estudiante 3\t88.5\t\t92.0\t\t93.5\n",
+      "Estudiante 4\t75.0\t\t75.0\t\t76.5\n",
+      "Estudiante 5\t13.5\t\t17.0\t\t18.5\n",
+      "Percentil por materia: \n",
+      "\n",
+      "Materia\t\tPercentil 25\tPercentil 50\tPercentil 75\n",
+      "Matemáticas\t40.0\t\t68.0\t\t75.0\n",
+      "Ciencias\t52.0\t\t55.0\t\t75.0\n",
+      "Lenguaje\t28.0\t\t78.0\t\t80.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def obtener_percentiles_por_estudiante(calificaciones):\n",
+    "    print(\"Percentil por estudiante: \\n\")\n",
+    "    print(\"Estudiante\\tPercentil 25\\tPercentil 50\\tPercentil 75\")\n",
+    "\n",
+    "    # Iteración sobre filas (Cada fila corresponde a un estudiante)\n",
+    "    for idx, calificaciones_estudiante in enumerate(calificaciones):\n",
+    "        percentil_25 = np.percentile(calificaciones_estudiante, 25)\n",
+    "        percentil_50 = np.percentile(calificaciones_estudiante, 50)\n",
+    "        percentil_75 = np.percentile(calificaciones_estudiante, 75)\n",
+    "        print(f\"Estudiante {idx + 1}\\t{percentil_25}\\t\\t{percentil_50}\\t\\t{percentil_75}\")\n",
+    "\n",
+    "def obtener_percentiles_por_materia(calificaciones):\n",
+    "    print(\"Percentil por materia: \\n\")\n",
+    "    print(\"Materia\\t\\tPercentil 25\\tPercentil 50\\tPercentil 75\")\n",
+    "    nombres_materias = [\"Matemáticas\", \"Ciencias\", \"Lenguaje\"]\n",
+    "\n",
+    "    # Iteración sobre columnas (Cada columna corresponde a un estudiante)\n",
+    "    # Para iterar sobre las columnas, se usa la transpuesta (array.T)\n",
+    "    # Datos de transpueta obtenidos del sgte. enlace: https://stackoverflow.com/a/10148855\n",
+    "    for idx, calificaciones_materia in enumerate(calificaciones.T):\n",
+    "        percentil_25 = np.percentile(calificaciones_materia, 25)\n",
+    "        percentil_50 = np.percentile(calificaciones_materia, 50)\n",
+    "        percentil_75 = np.percentile(calificaciones_materia, 75)\n",
+    "        nombre_materia = nombres_materias[idx] if idx < len(nombres_materias) else f\"Materia {idx}\"\n",
+    "        print(f\"{nombre_materia}\\t{percentil_25}\\t\\t{percentil_50}\\t\\t{percentil_75}\")\n",
+    "\n",
+    "\n",
+    "obtener_percentiles_por_estudiante(calificaciones)\n",
+    "obtener_percentiles_por_materia(calificaciones)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "ds_bootcamp_venv",
    "language": "python",
    "name": "python3"
   },
@@ -608,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
