--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -654,7 +654,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ds_bootcamp_venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -668,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
