correccion de comentario

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -155,7 +155,7 @@
        "'hola, somos el mejor curso de Data Science de Coding Dojo'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
     "    print(\"Materia\\t\\tPercentil 25\\tPercentil 50\\tPercentil 75\")\n",
     "    nombres_materias = [\"Matemáticas\", \"Ciencias\", \"Lenguaje\"]\n",
     "\n",
-    "    # Iteración sobre columnas (Cada columna corresponde a un estudiante)\n",
+    "    # Iteración sobre columnas (Cada columna corresponde a una materia)\n",
     "    # Para iterar sobre las columnas, se usa la transpuesta (array.T)\n",
     "    # Datos de transpueta obtenidos del sgte. enlace: https://stackoverflow.com/a/10148855\n",
     "    for idx, calificaciones_materia in enumerate(calificaciones.T):\n",
