Se ha añadido los codigo s para verificacion de contraseña y el calculo de percentiles por estudiante y por materia

--- a/clases/DS fundamentals/Clase_1/ejercicios.ipynb
+++ b/clases/DS fundamentals/Clase_1/ejercicios.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "'hola, somos el mejor curso de Data Science de Coding Dojo'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,10 +190,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Debe contener caracteres en mayúsculas\n",
+      "No se cumplió con el requisito, intentelo nuevamente\n"
+     ]
+    }
+   ],
+   "source": [
+    "def verificar_longitud(contra):\n",
+    "    resultado = False\n",
+    "    if len(contra)>=8:\n",
+    "        resultado= True\n",
+    "    return resultado\n",
+    "\n",
+    "def verificar_mayusculas(contra):\n",
+    "    resultado = False\n",
+    "    cantidad=len(contra)\n",
+    "    for i in range(cantidad):\n",
+    "        if (contra[i].isupper()):\n",
+    "            resultado= True\n",
+    "    return resultado\n",
+    "\n",
+    "def verificar_numeros(contra):\n",
+    "    resultado = False\n",
+    "    cantidad=len(contra)\n",
+    "    for i in range(cantidad):\n",
+    "        if (contra[i].isdigit()):\n",
+    "            resultado= True\n",
+    "    return resultado\n",
+    "\n",
+    "nombre = input(\"Ingrese nombre\")\n",
+    "contra = input(\"Ingrese su contraseña\")\n",
+    "\n",
+    "cantidad = verificar_longitud(contra)\n",
+    "if cantidad == False:\n",
+    "    print(\"Longitud no superada\")\n",
+    "\n",
+    "mayusculas = verificar_mayusculas(contra)\n",
+    "if mayusculas == False:\n",
+    "    print(\"Debe contener caracteres en mayúsculas\")\n",
+    "\n",
+    "numerico = verificar_numeros(contra)\n",
+    "if numerico == False:\n",
+    "    print(\"Debe contenier al menos un mumero\")\n",
+    "\n",
+    "\n",
+    "if (numerico and mayusculas and cantidad):\n",
+    "    print(\"El registro fue exitoso\")\n",
+    "else:\n",
+    "    print(\"No se cumplió con el requisito, intentelo nuevamente\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,22 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Propiedades del array:\n",
-      "Forma (shape): (5, 3)\n",
-      "Número de elementos (size): 15\n",
-      "Tipo de datos (dtype): int64\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -256,45 +295,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[55, 28],\n",
-       "       [52, 80],\n",
-       "       [95, 85],\n",
-       "       [75, 78],\n",
-       "       [17, 10]])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "calificaciones[0:,1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Operaciones básicas:\n",
-      "Suma total de las calificaciones: [59.  58.8 56.2]\n",
-      "Promedio de calificaciones por estudiante: [41.         66.66666667 90.66666667 76.         15.66666667]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Operaciones básicas\n",
     "print(\"Operaciones básicas:\")\n",
@@ -307,26 +319,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multiplicación y división:\n",
-      "Calificaciones mejoradas (10%): \n",
-      "[[ 44.   60.5  30.8]\n",
-      " [ 74.8  57.2  88. ]\n",
-      " [101.2 104.5  93.5]\n",
-      " [ 82.5  82.5  85.8]\n",
-      " [ 22.   18.7  11. ]]\n",
-      "Calificaciones de Ciencias divididas por 2: [27.5 26.  47.5 37.5  8.5]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4. Multiplicación y división\n",
     "print(\"Multiplicación y división:\")\n",
@@ -341,25 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Operaciones universales (ufuncs):\n",
-      "Raíz cuadrada de las calificaciones mejoradas: \n",
-      "[[ 6.63324958  7.77817459  5.54977477]\n",
-      " [ 8.64869932  7.56306816  9.38083152]\n",
-      " [10.05982107 10.22252415  9.6695398 ]\n",
-      " [ 9.08295106  9.08295106  9.26282894]\n",
-      " [ 4.69041576  4.32434966  3.31662479]]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5. Operaciones universales (ufuncs)\n",
     "print(\"Operaciones universales (ufuncs):\")\n",
@@ -370,20 +349,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Indexación y slicing:\n",
-      "Calificaciones en Matemáticas de todos los estudiantes: [40 68 92 75 20]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6. Indexación y slicing\n",
     "print(\"Indexación y slicing:\")\n",
@@ -394,21 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Suma y producto:\n",
-      "Suma total de calificaciones por estudiante: [123 200 272 228  47]\n",
-      "Producto de calificaciones por estudiante: [ 61600 282880 742900 438750   3400]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 7. Suma y producto\n",
     "print(\"Suma y producto:\")\n",
@@ -421,24 +377,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Estadísticas básicas:\n",
-      "Promedio de calificaciones por materia: [59.  58.8 56.2]\n",
-      "Desviación estándar por materia: [25.72158627 26.00307674 30.98644865]\n",
-      "Calificación mínima por materia: [20 17 10]\n",
-      "Calificación máxima por materia: [92 95 85]\n",
-      "Calificación máxima por materia: [43.59590892 44.22291963 55.13602963]\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 8. Estadísticas básicas\n",
     "print(\"Estadísticas básicas:\")\n",
@@ -457,18 +398,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Agregaciones en arrays multidimensionales:\n",
-      "Suma total de calificaciones por materia: [295 294 281]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 9. Agregaciones en arrays multidimensionales\n",
     "print(\"Agregaciones en arrays multidimensionales:\")\n",
@@ -491,7 +423,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1. Cálculo de percentiles por estudiante (filas)\n",
+    "percentiles_estudiantes = np.percentile(calificaciones, [25, 50, 75], axis=1)\n",
+    "print(\"Percentiles por estudiante (25, 50, 75):\")\n",
+    "print(percentiles_estudiantes)\n",
+    "\n",
+    "# 2. Cálculo de percentiles por materia (columnas)\n",
+    "percentiles_materias = np.percentile(calificaciones, [25, 50, 75], axis=0)\n",
+    "print(\"\\nPercentiles por materia (25, 50, 75):\")\n",
+    "print(percentiles_materias)"
+   ]
   }
  ],
  "metadata": {
@@ -510,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
